# OpenVidAgent

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/agents/: agent-ecosystem-optimizer.md  architecture-reviewer.md  phase-auditor.md  test-debugger.md
backend/: __init__.py
backend/app/: __init__.py  main.py
tests/: __init__.py  test_application_errors.py  test_architecture_boundaries.py  test_asset_api.py  test_clip_candidate.py  test_clip_candidate_use_cases.py  test_clip_downloader_adapter.py  test_clip_downloader_port.py  test_clip_retrieval_provider_port.py  test_clip_selector_port.py  test_downloaded_clip.py  test_downloaded_clip_api.py  test_downloaded_clip_use_cases.py  test_draft_planning_workflow.py  test_generate_scene_table_use_case.py  test_generate_script_draft_use_case.py  test_generate_stock_plan_use_case.py  test_generation_adapters.py  test_health_check.py  test_local_filesystem_storage.py  test_provider_registry.py  test_provider_substitution.py  test_render_output_api.py  test_render_output_generator_adapter.py  test_render_output_generator_port.py  test_render_output_manifest.py  test_render_output_use_cases.py  test_render_plan_api.py  test_render_plan_segment.py  test_render_plan_use_cases.py  test_render_planner_adapter.py  test_render_planner_port.py  test_render_readiness_api.py  test_render_readiness_checker_adapter.py  test_render_readiness_checker_port.py  test_render_readiness_report.py  test_render_readiness_use_cases.py  test_run_api.py  test_run_lifecycle_transitions.py  test_run_use_cases.py  (+24 more)
tests/fakes/: __init__.py  (+3 more)
(+68 files in other folders)
