[project]
name = "openvidagent"
version = "0.1.0"
description = "Local-first AI video agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]
